# djangoDRF-template

./: .env-exemplo  docker-compose.yml  pyproject.toml
config/: pagination.py  settings.py  urls.py
core/__seedwork/: models.py
core/uploader/migrations/: 0001_initial.py
core/usuario/: admin.py  models.py  router.py
core/usuario/migrations/: 0001_initial.py
core/usuario/utils/: login.py  newPassword.py  register.py
